--- a/MasterPerform/appsettings.json
+++ b/MasterPerform/appsettings.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ElasticSearchSettings": {
+        "NodeUrl": "http://localhost:9200" 
     }
-  },
-  "AllowedHosts": "*"
 }
