--- a/MasterPerform/appsettings.json
+++ b/MasterPerform/appsettings.json
@@ -8,6 +8,7 @@
     },
     "AllowedHosts": "*",
     "ElasticSearchSettings": {
-        "NodeUrl": "http://localhost:9200" 
+        "NodeUrl": "http://localhost:9200",
+        "ShardsNumber": 5 
     }
 }
