--- a/src/MasterPerform.WebApi/MasterPerform.WebApi.csproj
+++ b/src/MasterPerform.WebApi/MasterPerform.WebApi.csproj
@@ -4,6 +4,11 @@
         <TargetFramework>netcoreapp2.1</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+      <DocumentationFile>F:\Projects\Study\MasterPerform\MasterPerfom\src\MasterPerform.WebApi\MasterPerform.WebApi.xml</DocumentationFile>
+      <DefineConstants>TRACE</DefineConstants>
+    </PropertyGroup>
+
     <ItemGroup>
       <Compile Remove="wwwroot\**" />
       <Content Remove="wwwroot\**" />
@@ -12,6 +17,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\MasterPerform.Contracts\MasterPerform.Contracts.csproj" />
+        <ProjectReference Include="..\..\MasterPerform\MasterPerform.csproj" />
         <ProjectReference Include="..\MasterPerform.Infrastructure\MasterPerform.Infrastructure.csproj" />
     </ItemGroup>
 
