--- a/src/MasterPerform.WebApi/appsettings.json
+++ b/src/MasterPerform.WebApi/appsettings.json
@@ -1,14 +1,14 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
-        }
-    },
-    "AllowedHosts": "*",
-    "ElasticSearchSettings": {
-        "NodeUrl": "http://localhost:9200",
-        "ShardsNumber": 5 
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ElasticsearchSettings": {
+    "NodeUrl": "http://localhost:9200",
+    "ShardsNumber": 5
+  }
 }
