--- a/src/MasterPerform.Infrastructure/MasterPerform.Infrastructure.csproj
+++ b/src/MasterPerform.Infrastructure/MasterPerform.Infrastructure.csproj
@@ -13,10 +13,20 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.4" />
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
-        <PackageReference Include="NEST" Version="6.8.0" />
-        <PackageReference Include="NEST.JsonNetSerializer" Version="6.8.0" />
+        <PackageReference Include="NEST" Version="7.0.1" />
+        <PackageReference Include="NEST.JsonNetSerializer" Version="7.0.1" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+        <PackageReference Include="Scrutor" Version="3.0.2" />
+        <PackageReference Include="Serilog" Version="2.8.0" />
+        <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+        <PackageReference Include="Serilog.Sinks.ColoredConsole" Version="3.0.1" />
+        <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="4.0.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="4.0.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="4.0.1" />
     </ItemGroup>
 
 </Project>
