New handlers for queries and updates

--- a/src/MasterPerform.Contracts/MasterPerform.Contracts.csproj
+++ b/src/MasterPerform.Contracts/MasterPerform.Contracts.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\MasterPerform.Infrastructure\MasterPerform.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="MasterPerform.Contracts.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
