--- a/src/MasterPerform.WebApi/MasterPerform.WebApi.csproj
+++ b/src/MasterPerform.WebApi/MasterPerform.WebApi.csproj
@@ -15,4 +15,10 @@
         <ProjectReference Include="..\MasterPerform.Infrastructure\MasterPerform.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="MasterPerform.WebApi.xml">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
