--- a/src/MasterPerform.WebApi/appsettings.json
+++ b/src/MasterPerform.WebApi/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft": "Information"
     }
   },
+  "EnvironmentSettings": {
+    "Prefix": "dev"
+  },
   "AllowedHosts": "*",
   "ElasticsearchSettings": {
     "NodeUrl": "http://localhost:9200",
