--- a/src/MasterPerform/MasterPerform.csproj
+++ b/src/MasterPerform/MasterPerform.csproj
@@ -12,4 +12,8 @@
     <Folder Include="UpdateModels\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Bogus" Version="28.0.2" />
+  </ItemGroup>
+
 </Project>
