Add service bus

--- a/src/MasterPerform.WebApi/appsettings.json
+++ b/src/MasterPerform.WebApi/appsettings.json
@@ -13,5 +13,10 @@
   "ElasticsearchSettings": {
     "NodeUrl": "http://localhost:9200",
     "ShardsNumber": 5
-  }
+  },
+  "ServiceBusSettings": {
+    "ConnectionString": "",
+    "QueueName": "master-perform",
+    "ShouldForward":  false 
+  } 
 }
